# hal-netlist-statistics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: HalPluginsUtils.cmake
include/: factory_netlist_statistics.h  plugin_netlist_statistics.h
python/: python_definitions.cpp
src/: factory_netlist_statistics.cpp  plugin_netlist_statistics.cpp
tools/: genversion.py
